# Mythos

./: .dockerignore  .env.example  .gitattributes  .gitignore  .release-please-manifest.json  ALPHA.md  CHANGELOG.md  Dockerfile  Plano-Upgrade-v3.md  Plano-Upgrade.md  README.md  alpha.spec  main.py  pyproject.toml
.alpha/: settings.json.example
.github/workflows/: build-binary.yml  ci.yml  publish-pypi.yml  release.yml
agents/mythos/: agent.yaml
alpha/: __init__.py  _http_clients.py  _http_singleton.py  _json_utils.py  _loop_detect.py  _rate_limiter.py  _registry.py  _resources.py  _security_log.py  _subprocess.py  agent.py  analyzer_base.py  approval.py  audio.py  c_analyzer.py  config.py  context.py  cost.py  depgraph.py  display.py  embeddings.py  executor.py  exploit_feedback.py  go_analyzer.py  history.py  hooks.py  js_analyzer.py  jsonlogs.py  llm.py  llm_anthropic.py  llm_fixtures.py  memory.py  net_utils.py  ocr.py  pdf.py  reasoning.py  repl_input.py  replay.py  rust_analyzer.py  sandbox.py  (+4 more)
alpha/agent/: __init__.py  loop.py
alpha/agents/: __init__.py  loader.py  registry.py  scope.py
alpha/cli/: commands.py  lifecycle.py  setup.py  skills_cli.py
alpha/cli/commands/: __init__.py  _types.py  agent_meta.py  cost.py  help.py  io.py  memory_cmd.py  safety.py  session.py
alpha/data/: __init__.py
alpha/display/: __init__.py  core.py  markdown.py  theme.py  thinking.py
alpha/display/renderers/: __init__.py  planning.py  prompts.py  tools.py
alpha/mcp/: __init__.py  client.py  loader.py
alpha/preflight/: __init__.py  cost_estimate.py  feedback.py  time_estimate.py
alpha/prompts/: __init__.py  system.md
alpha/providers/: __init__.py
alpha/skills/: __init__.py  manager.py  registry.py
alpha/tools/: __init__.py  _browser_registrations.py  _browser_tabs.py  _composite_deploy.py  _composite_helpers.py  _composite_project.py  _composite_snr.py  _composite_tests.py  _delegate_core.py  _delegate_policy.py  _delegate_scratch.py  _subprocess_helpers.py  apify_tools.py  browser_session.py  browser_tools.py  c_analysis_tools.py  code_graph_tools.py  code_tools.py  composite_tools.py  database_tools.py  delegate_tools.py  deploy_check.py  exploit_feedback_tools.py  exploit_tools.py  file_tools.py  git_tools.py  interaction_tools.py  memory_tools.py  multi_lang_tools.py  network_tools.py  path_helpers.py  pipeline_tools.py  plan_tools.py  project_overview.py  red_tools.py  run_tests.py  safe_env.py  search_and_replace.py  search_tools.py  security_tools.py  (+3 more)
alpha/wizard/: __init__.py  env.py  runner.py  steps.py
docs/: USER_GUIDE.md
docs/runbooks/: pricing_model_variants.md
docs/specs/: pre-flight-cards.md
prompts/: system.md
scripts/: sync-upstream.sh
skills/audit-1-setup/: SKILL.md
skills/audit-2-scan/: SKILL.md
skills/audit-3-review/: SKILL.md
skills/audit-4-report/: SKILL.md
skills/audit-deep/: SKILL.md
skills/exploit-analysis/: SKILL.md
skills/exploit-development/: SKILL.md
skills/git-save/: SKILL.md
skills/mvp-1-check/: SKILL.md
skills/mvp-2-report/: SKILL.md
skills/pentest-recon/: SKILL.md
skills/red-team-ops/: SKILL.md
skills/release-setup/: SKILL.md
skills/security-audit/: SKILL.md
skills/simplify/: SKILL.md
skills/status-update/: SKILL.md
test_targets/: e2e_c_pipeline.py  run_feedback.py  smoke_test.py  sweep_offset.py  sweep_offset2.py  test_graph.py  test_multi.py  validate_all.py
test_targets/vulnerable/: vuln_bin  vuln_c_demo.c  vulnerable.c
tests/: test_agents_workspace.py  test_approval.py  test_audio.py  test_bugs_v10_stragglers.py  test_code_sandbox.py  test_config.py  test_cost.py  test_delegate_consensus.py  test_display_subagent.py  test_error_paths.py  test_json_utils.py  test_jsonlogs.py  test_llm.py  test_llm_fixtures.py  test_maint_perf_quick_wins.py  test_markdown_recap.py  test_memory.py  test_pdf.py  test_perf_fixes.py  test_permissions.py  test_preflight.py  test_preflight_slice2.py  test_preflight_summarize.py  test_provider_canary.py  test_providers_registry.py  test_quick_wins_a.py  test_reasoning_content.py  test_replay.py  test_resilience_v10_v11_batch2.py  test_sandbox.py  test_security_coverage.py  test_security_v10_v11_batch2.py  test_shell_sandbox.py  test_skills_manager.py  test_stats.py  test_subagent_blocked.py  test_subagent_policy.py  test_system_prompt_snapshot.py
tests/fixtures/llm/anthropic/: empty_finish_reason.json
tests/fixtures/llm/deepseek/: happy_path.json
tests/fixtures/llm/openai/: tool_then_finish.json
tests/integration/: test_fixture_replay.py  test_repl_flow.py
tests/snapshots/: system_prompt.md
