[project]
name = "alpha-code"
version = "1.21.8"
description = "Standalone terminal agent with multi-provider LLM support, MCP, and multi-agent delegation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jonatas Freire", email = "eujonatasfreire@gmail.com" },
]
keywords = [
    "llm", "agent", "terminal", "cli", "deepseek", "anthropic", "openai",
    "mcp", "claude-code-alternative", "tool-calling",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Terminals",
    "Typing :: Typed",
]
# DEEP_SECURITY #036: upper bounds em todas as deps. Sem cap, `pip install -U`
# pode puxar uma major release com breaking changes ou CVE recem-introduzido
# antes de termos chance de auditar. Cap por major + 1 segue o padrao de
# semver-aware constraints (ex: `httpx>=0.27,<2.0` = "qualquer 0.x ou 1.x ate
# 2.0 exclusivo"). Aliado ao lockfile (`requirements.lock`) que pin exato.
dependencies = [
    "httpx>=0.27,<1.0",
    "python-dotenv>=1.0,<2.0",
    "ddgs>=9.0,<10.0",
    "pyyaml>=6.0,<7.0",
    "prompt_toolkit>=3.0,<4.0",
    # Pin transitive: lxml < 6.1.0 e vulneravel a CVE-2026-41066 (XXE/local file read)
    "lxml>=6.1.0,<7.0",
    # DEEP_SECURITY V3.3 #005: idna < 3.15 tem CVE-2026-45409 (UTS46 transitional
    # parsing diverge — domínios com Unicode podem mapear para hosts inesperados).
    # Transitiva via httpx; forçamos diretamente para garantir o pin no lockfile.
    "idna>=3.15,<4.0",
    # Windows-only: traduz ANSI escapes pra Win32 console API (cores e
    # animacoes funcionam em PowerShell/cmd). No-op em Linux/macOS — o
    # marker sys_platform garante que pip nem instala fora do Windows.
    "colorama>=0.4,<1.0; sys_platform == 'win32'",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40,<2.0",
]
network = [
    # http_request usa aiohttp lazy-import; sem isso o tool retorna ImportError
    "aiohttp>=3.9,<4.0",
]
database = [
    # query_database/list_tables/describe_table para PostgreSQL
    "asyncpg>=0.29,<1.0",
]
web = [
    # extract_page_content (web_search) usa trafilatura como extrator primario
    "trafilatura>=1.6,<3.0",
]
multimodal = [
    # /pdf REPL command (H3 #18) — text extraction via pypdf.
    # Audio (/audio) uses Whisper via httpx (already a core dep) so it
    # has no extra package here.
    "pypdf>=4.0,<7.0",
]
binary = [
    # PyInstaller for the standalone binary build (Plano-v3 §4 Tier 2).
    # Kept out of `dev` so day-to-day CI doesn't pull in ~30MB of build
    # tooling that's only used when cutting a release artifact.
    "pyinstaller>=6.0,<7.0",
]
all = [
    "alpha-code[browser,network,database,web,multimodal,dev]",
]
dev = [
    # AUDIT_V1.2 #010: pytest 9.0.2 vulneravel a CVE-2025-71176 (fix em 9.0.3).
    # Pinned `>=9.0.3` para forcar upgrade no proximo `pip install -e .[dev]`.
    "pytest>=9.0.3,<10.0",
    "pytest-asyncio>=0.24,<2.0",
    # pytest-cov gates coverage regression in CI (H2 #12). Threshold in
    # [tool.coverage.report] fail_under; bump as suite grows.
    "pytest-cov>=5.0,<8.0",
    # pip-audit pra detectar CVEs em CI / pre-release (#036).
    "pip-audit>=2.7,<3.0",
]

[project.urls]
Homepage = "https://github.com/freire19/Alpha_Code"
Repository = "https://github.com/freire19/Alpha_Code"
Issues = "https://github.com/freire19/Alpha_Code/issues"
Changelog = "https://github.com/freire19/Alpha_Code/blob/master/CHANGELOG.md"

[project.scripts]
alpha = "main:main"

[tool.setuptools]
py-modules = ["main"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["alpha*"]

# Ship the bundled prompts inside the alpha/prompts/ subpackage so a
# pipx-installed Alpha still has system.md / subagent.md available.
# Without this, only .py files land in the wheel (H3 #13).
[tool.setuptools.package-data]
"alpha.prompts" = ["*.md"]
# Bundle the built-in agent profiles (default/lean/researcher) so a
# pipx-installed Alpha has them out-of-the-box without the user copying
# anything into ~/.alpha/agents/.
"alpha.data" = ["agents/**/*.yaml"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage is opt-in (--cov flag) rather than always-on so day-to-day
# pytest stays fast. CI runs with --cov=alpha --cov-fail-under to gate
# regressions. Local devs use `pytest --cov=alpha` when investigating.

[tool.coverage.run]
source = ["alpha"]
omit = [
    "alpha/_platform.py",        # OS-detection shim, branches by IS_WINDOWS
    "alpha/wizard/*",            # one-shot env setup, runs interactively
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
# Plano-Upgrade-v3 H2 target: 60%. Current: 49%. The interim threshold
# locks the current baseline against regression while coverage climbs
# in follow-up commits. Bump this when the test suite catches up.
fail_under = 45
